[tool.poetry]
name = "studdybudy"
version = "2.0"
description = ""
authors = ["AlpacaSundae <jaicobschott@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
customtkinter = "^5.2.0"
pymusiclooper = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
